--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,8 +9,8 @@ description = "Mechanistic interpretability pipeline for extracting and analyzin
 readme = "README.md"
 requires-python = ">=3.9"
 dependencies = [
-    "sae-lens==4.3.0",
-    "transformer-lens==2.8.0",
+    "sae-lens>=6.33.0",
+    "transformer-lens>=3.0.0b0",
     "vllm>=0.6.0",
     "numpy>=1.24.0",
     "pyyaml>=6.0",
