--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,11 +10,13 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "sae-lens>=6.33.0",
-    "vllm>=0.6.0",
     "numpy>=1.24.0",
     "pyyaml>=6.0",
     "jsonlines>=4.0.0",
     "tqdm>=4.66.0",
 ]
+
+[project.optional-dependencies]
+generation = ["vllm>=0.6.0"]
 
 [tool.setuptools.packages.find]
