--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,5 +18,9 @@ dependencies = [
 
 [project.optional-dependencies]
 generation = ["vllm>=0.6.0"]
+visualization = [
+    "umap-learn>=0.5.0",
+    "seaborn>=0.13.0",
+]
 
 [tool.setuptools.packages.find]
