--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ dependencies = [
 [project.optional-dependencies]
 generation = ["vllm>=0.6.0"]
 visualization = [
+    "scikit-learn>=1.4.0",
     "umap-learn>=0.5.0",
     "seaborn>=0.13.0",
 ]
