--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ visualization = [
     "scikit-learn>=1.4.0",
     "umap-learn>=0.5.0",
     "seaborn>=0.13.0",
+    "plotly>=5.24.0",
 ]
 
 [tool.setuptools.packages.find]
